--- a/spring-cloud-stream-binder-jms/pom.xml
+++ b/spring-cloud-stream-binder-jms/pom.xml
@@ -10,7 +10,7 @@
     <parent>
         <groupId>org.springframework.cloud</groupId>
         <artifactId>spring-cloud-build</artifactId>
-        <version>1.2.2.BUILD-SNAPSHOT</version>
+        <version>1.2.2.RELEASE</version>
     </parent>
 
     <modules>
@@ -25,7 +25,7 @@
             <dependency>
                 <groupId>org.springframework.cloud</groupId>
                 <artifactId>spring-cloud-stream-dependencies</artifactId>
-                <version>Chelsea.BUILD-SNAPSHOT</version>
+                <version>Chelsea.SR2</version>
                 <type>pom</type>
                 <scope>import</scope>
             </dependency>
